{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 175,
  "lineage": "0cb019b0-0199-7c0b-9c0f-711a37492810",
  "resources": [
    {
      "module": "module.db_vm",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "db_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20230809",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/pure-anthem-393513/zones/europe-west9-a/disks/db-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/pure-anthem-393513/zones/europe-west9-a/instances/db-vm",
            "instance_id": "2252590481638206915",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "dsdtwsTrrCk=",
            "metadata_startup_script": "            #!/bin/bash\n        apt-get update\n        apt-get install -y ansible\n        ansible-playbook ansible/roles/database/main.yml\n",
            "name": "db-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.163.40.211",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/pure-anthem-393513/global/networks/my-vpc-network",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/pure-anthem-393513/regions/europe-west9/subnetworks/my-vpc-subnet",
                "subnetwork_project": "pure-anthem-393513"
              }
            ],
            "project": "pure-anthem-393513",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/pure-anthem-393513/zones/europe-west9-a/instances/db-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west9-a"
          },
          "dependencies": [
            "module.vpc.google_compute_network.my_vpc_network",
            "module.vpc.google_compute_subnetwork.my_vpc_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-08-10T09:41:16.053-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/pure-anthem-393513/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/pure-anthem-393513/global/networks/my-vpc-network",
            "priority": 1000,
            "project": "pure-anthem-393513",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pure-anthem-393513/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.my_vpc_network",
            "module.vpc.google_compute_subnetwork.my_vpc_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-08-10T09:41:15.948-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/pure-anthem-393513/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/pure-anthem-393513/global/networks/my-vpc-network",
            "priority": 1000,
            "project": "pure-anthem-393513",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pure-anthem-393513/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.my_vpc_network",
            "module.vpc.google_compute_subnetwork.my_vpc_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-tcp-icmp-udp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2023-08-10T09:41:16.083-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/pure-anthem-393513/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/pure-anthem-393513/global/networks/my-vpc-network",
            "priority": 1000,
            "project": "pure-anthem-393513",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pure-anthem-393513/global/firewalls/allow-internal",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.my_vpc_network",
            "module.vpc.google_compute_subnetwork.my_vpc_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "db_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3306"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-08-10T09:41:16.029-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/pure-anthem-393513/global/firewalls/allow-mariadb",
            "log_config": [],
            "name": "allow-mariadb",
            "network": "https://www.googleapis.com/compute/v1/projects/pure-anthem-393513/global/networks/my-vpc-network",
            "priority": 1000,
            "project": "pure-anthem-393513",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pure-anthem-393513/global/firewalls/allow-mariadb",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.my_vpc_network",
            "module.vpc.google_compute_subnetwork.my_vpc_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "my_vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/pure-anthem-393513/global/networks/my-vpc-network",
            "mtu": 0,
            "name": "my-vpc-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "pure-anthem-393513",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pure-anthem-393513/global/networks/my-vpc-network"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "my_vpc_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-08-10T09:40:54.372-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/pure-anthem-393513/regions/europe-west9/subnetworks/my-vpc-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "my-vpc-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/pure-anthem-393513/global/networks/my-vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "pure-anthem-393513",
            "purpose": "PRIVATE",
            "region": "europe-west9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/pure-anthem-393513/regions/europe-west9/subnetworks/my-vpc-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.my_vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.wordpress_vm",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "wordpress_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20230809",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/pure-anthem-393513/zones/europe-west9-a/disks/wordpress-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/pure-anthem-393513/zones/europe-west9-a/instances/wordpress-vm",
            "instance_id": "4615242065498385859",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "lyBYEPpSPLs=",
            "metadata_startup_script": "            #!/bin/bash\n        apt-get update\n        apt-get install -y ansible\n        ansible-playbook ansible/roles/wordpress/main.yml\n",
            "name": "wordpress-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.163.201.59",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/pure-anthem-393513/global/networks/my-vpc-network",
                "network_ip": "10.0.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/pure-anthem-393513/regions/europe-west9/subnetworks/my-vpc-subnet",
                "subnetwork_project": "pure-anthem-393513"
              }
            ],
            "project": "pure-anthem-393513",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/pure-anthem-393513/zones/europe-west9-a/instances/wordpress-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west9-a"
          },
          "dependencies": [
            "module.vpc.google_compute_network.my_vpc_network",
            "module.vpc.google_compute_subnetwork.my_vpc_subnet"
          ]
        }
      ]
    }
  ]
}